--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -1,5 +1,5 @@
 
-/* 
+
 button {
     height: 25px;
     padding: 3px;
@@ -12,7 +12,7 @@ button {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: brown;
+    /* background-color: brown; */
     width: 100%;
     height: 100%
 
@@ -27,4 +27,4 @@ button {
     width: 100px;
     background-color: transparent ;
     border: none;
-} */
+}
