--- a/frontend/src/components/LoginFormPage/LoginFormPage.css
+++ b/frontend/src/components/LoginFormPage/LoginFormPage.css
@@ -49,7 +49,7 @@ input:not(#submit) {
 }
 
 #submit {
-    background-color: #5cb9ff;;
+    background-color: #5cb9ff;
     color: white;
     font-weight:bolder;
 }
