--- a/frontend/src/components/DemoUserForm/DemoUserForm.css
+++ b/frontend/src/components/DemoUserForm/DemoUserForm.css
@@ -15,7 +15,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height: 40px;
     width: 400px;
     font-size: 20px;
     font-weight: bolder;
@@ -30,7 +30,7 @@ form {
     justify-content: space-around;
     width: 400px;
     /* background-color: pink; */
-    margin: 20px;
+    margin: 20px 20px 20px 0px;
    
 }
 
