--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -1,12 +1,14 @@
 
 
 button {
-    height: 25px;
+    height: 35px;
     padding: 3px;
     border-radius: 5px;
     color: white;
     /* background-color: rgb(102, 102, 174); */
     background-color: #5cb9ff;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #container {
@@ -22,10 +24,12 @@ button {
 #login-button {
     border: 2px solid white;
     background-color: transparent;
+    padding-left: 13px;
+    padding-right: 13px;
+
 }
 
 #review-button {
-    width: 100px;
     background-color: transparent ;
     border: none;
 }
