--- a/frontend/src/components/SignupFormPage/SignupFormPage.css
+++ b/frontend/src/components/SignupFormPage/SignupFormPage.css
@@ -3,7 +3,7 @@
 #signupFormContainer {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: center;
     margin: 300px;
     width: 450px;
@@ -17,7 +17,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height: 40px;
     width: 400px;
     font-size: 20px;
     font-weight: bolder;
@@ -32,7 +32,7 @@ form {
     justify-content: space-around;
     width: 400px;
     /* background-color: pink; */
-    margin: 20px;
+    margin: 20px 0px 20px 0px;
    
 }
 
@@ -52,4 +52,10 @@ input:not(#submit) {
     background-color: #5cb9ff;;
     color: white;
     font-weight:bolder;
+}
+
+ul {
+    color: red;
+    font-style: italic;
+    padding-left: 20px;
 }
