--- a/backend/frontend/src/components/LoginFormPage/LoginFormPage.css
+++ b/backend/frontend/src/components/LoginFormPage/LoginFormPage.css
@@ -1,23 +1,20 @@
 
 
-#signupFormContainer {
+#loginFormContainer {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
-    margin: 300px;
+    margin: 75px 300px 300px 300px;
     width: 450px;
-   
     /* background-color: lightblue; */
-
-
 }
 
 h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
+    height: 50px;
     width: 400px;
     font-size: 20px;
     font-weight: bolder;
@@ -32,11 +29,9 @@ form {
     justify-content: space-around;
     width: 400px;
     /* background-color: pink; */
-    margin: 20px 0px 20px 0px;
+    margin: 20px;
    
 }
-
-
 
 input {
     height: 30px;
@@ -49,9 +44,23 @@ input:not(#submit) {
 }
 
 #submit {
-    background-color: #5cb9ff;;
+    background-color: #5cb9ff;
     color: white;
     font-weight:bolder;
+}
+
+ .nav-link {
+   text-decoration: none !important;
+   color: #5cb9ff; 
+}
+
+#app-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+   
+    /* z-index: 100; */
 }
 
 ul {
