--- a/backend/frontend/src/components/SignupFormPage/SignupFormPage.css
+++ b/backend/frontend/src/components/SignupFormPage/SignupFormPage.css
@@ -1,30 +1,24 @@
 
 
-#loginFormContainer {
+#signupFormContainer {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    margin: 300px;
+    margin: 75px 300px 300px 300px;
     width: 450px;
-   
     /* background-color: lightblue; */
-
-
 }
 
 h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height: 40px;
     width: 400px;
     font-size: 20px;
     font-weight: bolder;
     color: #5cb9ff;
-    background-color: white;
-   
-    
+    background-color: white;  
 }
 form {
     display: flex;
@@ -32,7 +26,7 @@ form {
     justify-content: space-around;
     width: 400px;
     /* background-color: pink; */
-    margin: 20px;
+    margin: 20px 0px 20px 0px;
    
 }
 
@@ -54,21 +48,12 @@ input:not(#submit) {
     font-weight:bolder;
 }
 
- .nav-link {
-   text-decoration: none !important;
-}
-
-#app-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-   
-    /* z-index: 100; */
-}
-
 ul {
     color: red;
     font-style: italic;
     padding-left: 20px;
 }
+.nav-link {
+    text-decoration: none !important;
+    color: #5cb9ff; 
+ }
