--- a/frontend/src/components/Businesses/Businesses.css
+++ b/frontend/src/components/Businesses/Businesses.css
@@ -1,31 +1,50 @@
 
 
-.businessContainer {
+
+.background {
+
+    /* background-color: #5cb9ff;*/
+    background-color: rgba(92,185,255, 0.1);
+  
+  
     
+}
+h2 {
+    display: flex;
+    background-color: transparent;
+    justify-content: left;
+
+}
+
+.businessContainer {
     display: flex;
     flex-direction: column;
-    width: min(900px, 100%);
+    width: min(800px, 100%);
     height: 100vh;
-    margin: 100px 300px 300px 300px;
-    background-color:pink;
+    margin: 0px 300px 300px 300px;
+    /* background-color:pink; */
+    background-color: transparent;
+    
 }
 
 .bannerContainer {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: left;
     justify-content: center;
     width: 100%;
-    background-color: brown;
+    /* background-color: brown; */
+    background-color: transparent;
 }
 
 .cardContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+    background-color: transparent;
 
 }
 
