--- a/frontend/src/components/Businesses/Businesses.css
+++ b/frontend/src/components/Businesses/Businesses.css
@@ -33,8 +33,41 @@ h2 {
     align-items: left;
     justify-content: center;
     width: 100%;
+    height: 350px;
+ 
+    /* background-color: transparent; */
+}
+.topBanner {
+    display: flex;
+    height: 60%;
     /* background-color: brown; */
-    background-color: transparent;
+}
+.leftBanner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* background-color: aqua; */
+}
+
+.secondLine {
+    font-size: smaller;
+}
+.rightBanner {
+    display: flex; 
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    /* background-color: antiquewhite; */
+
+}
+
+.bottomBanner{
+    display: flex;
+    align-items: flex-end;
+    height: 40%;
+    /* background-color: yellow; */
+    font-weight: bold;
+
 }
 
 .cardContainer {
@@ -47,4 +80,6 @@ h2 {
     background-color: transparent;
 
 }
+
+
 
