--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -6,14 +6,30 @@
     justify-content: space-between;
     width: 100%;
     height: 40px;
-    background: green;
+    background: white;
+    border-radius: 6px;
 }
 
+
 .leftSearchBar {
+    display: flex;
+    flex: 1;
+    width:100%;
+    height:100%;
+    margin: 0;
+    border:none;
+    border-radius:none;
 
 }
 
-.leftSearchBar {
+.rightSearchBar {
+    display: flex;
+    flex:1;
+    width:100%;
+    height:100%;
+    margin: 0;
+    border:none;
+    border-radius:none;
     
 }
 
