--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -14,22 +14,24 @@
 .leftSearchBar {
     display: flex;
     flex: 1;
-    width:100%;
+    /* width:50%; */
     height:100%;
     margin: 0;
     border:none;
     border-radius:none;
+    /* background-color: blue; */
 
 }
 
 .rightSearchBar {
     display: flex;
-    flex:1;
-    width:100%;
+    flex: 1;
+    /* width:50%; */
     height:100%;
     margin: 0;
     border:none;
     border-radius:none;
+    /* background-color: blueviolet; */
     
 }
 
