--- a/frontend/src/components/Businesses/BusinessShow/BusinessShow.css
+++ b/frontend/src/components/Businesses/BusinessShow/BusinessShow.css
@@ -1,1 +1,72 @@
 
+
+#businessShowContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    /* background-color: blue; */
+}
+
+#heroContainer {
+    background-image: url("../../../assets/restaurant.jpeg");
+   
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 66vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+    background-color: aqua;
+}
+
+#businessGroup {
+    display:flex;
+    width: 100%;
+    padding-left: 200px;
+}
+
+#lowerContainer {
+    display: flex;
+    width: 100vw;
+    height: 100%;
+    /* background-color: aqua; */
+}
+
+#l-1, #l-4{
+    display: flex;
+  width: 20%;
+  /* background-color: blueviolet; */
+}
+
+#l-2 {
+  display: flex;
+    flex: 1;
+    /* background-color: bisque; */
+}
+
+#l-3{
+    display: flex;
+
+    width: 20%;
+    /* background-color: blueviolet; */
+
+}
+
+#l-4 {
+
+}
+
+.blue-button {
+    height: 35px;
+    padding: 3px;
+    border-radius: 5px;
+    color: white;
+    /* background-color: rgb(102, 102, 174); */
+    background-color: #5cb9ff;
+    padding-left: 10px;
+    padding-right: 10px;
+}
