--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,7 +5,12 @@
     height: 75px; 
     display: flex;
     align-items: space-between;
-    /* background-color: bisque; */
+   
+
+   
+}
+#navContainer.index {
+   background-color:  rgba(92,185,255, 0.5);
    
 }
 
