make new branch to save work seperating function in ReviewNew

--- a/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
+++ b/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
@@ -23,6 +23,10 @@
 .title {
     padding: 20px 0px;
 }
+
+.italic {
+    font-style:italic
+}
 .textareaLarge {
     /* height: min(600px, 60%); */
     height: 300px;
@@ -38,17 +42,7 @@
     
 }
 
-.button {
-    height: 35px;
-    padding: 3px;
-    border-radius: 5px;
-    color: white;
-    /* background-color: rgb(102, 102, 174); */
-    background-color: #5cb9ff;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 35%;
-}
+
 
 
 
