--- a/frontend/src/components/BusinessShow/BusinessShow.css
+++ b/frontend/src/components/BusinessShow/BusinessShow.css
@@ -9,7 +9,7 @@
 }
 
 #heroContainer {
-    background-image: url("../../../assets/restaurant.jpeg");
+    background-image: url("../../assets/restaurant.jpeg");
    
     background-size: cover;
     background-position: center;
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     z-index: -1;
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
 #businessGroup {
@@ -38,12 +38,16 @@
 
 #l-1, #l-4{
     display: flex;
-  width: 20%;
+  width: 10%;
   /* background-color: blueviolet; */
 }
 
 #l-2 {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 900px;
+  flex: 1;
     flex: 1;
     /* background-color: bisque; */
 }
@@ -58,6 +62,9 @@
 
 #l-4 {
 
+}
+.buttons{
+    display: flex;
 }
 
 .blue-button {
