--- a/frontend/src/components/BusinessShow/BusinessShow.css
+++ b/frontend/src/components/BusinessShow/BusinessShow.css
@@ -10,18 +10,27 @@
 
 #heroContainer {
     background-image: url("../../assets/restaurant.jpeg");
-   
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 66vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: end;
+    align-items: start;
     z-index: -1;
     /* background-color: aqua; */
 }
+.businessName {
+    font-size: 1in;
+    font-weight: 400;
+    opacity: 0.60;
+    letter-spacing: 0.25in;
+    color: white;
+    margin-left: 75px;
+    margin-bottom: 20px;
+    
+  }
 
 #businessGroup {
     display:flex;
@@ -45,10 +54,11 @@
 #l-2 {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
+  /* justify-content: flex-start; */
   width: 900px;
   flex: 1;
-    flex: 1;
+    /* flex: 1; */
     /* background-color: bisque; */
 }
 
@@ -65,6 +75,8 @@
 }
 .buttons{
     display: flex;
+    justify-content: center;
+    padding: 20px;
 }
 
 .blue-button {
