--- a/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
+++ b/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    box-sizing: border-box;
     width: 400px;
     height: 130px;
     border: black 1px solid;
@@ -12,19 +13,20 @@
 }
 
 #photoRatingCell {
-    width: 100px;
-    height:100%;
-    padding-left: 10px;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+
+    /* padding-left: 10px; */
     /* background-color: aquamarine; */
 }
 
-#photo {
-    height: 100%;
-    width: 100%;
-}
 #img {
-    height:min(80px,100%);
+    height:100%;
     width:100%;
+    border-radius: 14px 0px 0px 14px;
+    
 }
 
 #bodyContainer {
@@ -39,5 +41,6 @@
     width: 100%;
     padding-left: 20px;
     padding-top: 10px;
+  
     /* background-color: blue; */
 }
