--- a/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
+++ b/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: start;
     flex-wrap: wrap;
     width:100%;
-    height: 100%;
+
     /* background-color: green; */
 }
