--- a/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
+++ b/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     box-sizing: border-box;
-    width: 400px;
+    width: min(400px, 35%);
     height: 130px;
     border: black 1px solid;
     border-radius: 15px;
@@ -25,7 +25,7 @@
 #img {
     height:100%;
     width:100%;
-    border-radius: 14px 0px 0px 14px;
+    border-radius: 0px 14px 14px 0px;
     
 }
 
