--- a/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
+++ b/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
@@ -10,3 +10,11 @@
 
     /* background-color: green; */
 }
+
+#noReviews {
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    color: darkblue;
+    font-style: italic;
+}
