--- a/frontend/src/components/BusinessCard/BusinessCard.css
+++ b/frontend/src/components/BusinessCard/BusinessCard.css
@@ -20,8 +20,15 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-    border-radius: 6px 0px 0px 6px;
+    border-radius: 14px 0px 0px 14px;
     background-color:#5cb9ff;
+}
+
+#busPic {
+    width:100%;
+    height: 100%;
+    border: 1px solid transparent;
+    border-radius: 14px 0px 0px 14px;
 }
 
 #reviewContainer {
@@ -31,7 +38,7 @@
     box-sizing: border-box;
     height: 100%;
     background-color: white;
-    border-radius: 0 6px 6px 0;
+    border-radius: 0 14px 14px 0;
     padding: 20px;
 
 }
