--- a/frontend/src/components/Businesses/Businesses.css
+++ b/frontend/src/components/Businesses/Businesses.css
@@ -1,14 +1,7 @@
 
 
 
-.background {
 
-    /* background-color: #5cb9ff;*/
-    background-color: rgba(92,185,255, 0.1);
-  
-  
-    
-}
 h2 {
     display: flex;
     background-color: transparent;
@@ -17,36 +10,62 @@ h2 {
 }
 
 .businessContainer {
-    display: flex;
+    position: relative;
+    /* display: flex;
     flex-direction: column;
     width: min(800px, 100%);
     height: 100vh;
-    margin: 0px 300px 300px 300px;
-    /* background-color:pink; */
-    background-color: transparent;
+    margin: 0px 300px 300px 300px; */
+  
+ 
+    
+}
+
+
+.backgroundContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 350px;
+ 
+    z-index: 10;
+     background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg');
+    /* background-color: #5cb9ff; */
+    /* background-color: rgba(92,185,255, 0.1); */
+  
     
 }
 
 .bannerContainer {
+   
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 100px;
+    z-index: 20;
     width: 100%;
     height: 350px;
- 
+     /* background-color: red; */
     /* background-color: transparent; */
 }
 .topBanner {
     display: flex;
     height: 60%;
     /* background-color: brown; */
+     background-color: transparent;
 }
 .leftBanner {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     /* background-color: aqua; */
+    background-color: transparent;
 }
 
 .secondLine {
@@ -58,6 +77,7 @@ h2 {
     justify-content: center;
     align-items: center;
     /* background-color: antiquewhite; */
+    background-color: transparent;
 
 }
 
@@ -67,6 +87,7 @@ h2 {
     height: 40%;
     /* background-color: yellow; */
     font-weight: bold;
+    background-color: transparent;
 
 }
 
@@ -76,8 +97,8 @@ h2 {
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-    /* background-color: aquamarine; */
-    background-color: transparent;
+    background-color: aquamarine;
+    /* background-color: transparent; */
 
 }
 
