--- a/frontend/src/components/Businesses/Businesses.css
+++ b/frontend/src/components/Businesses/Businesses.css
@@ -2,23 +2,15 @@
 
 
 
-h2 {
-    display: flex;
-    background-color: transparent;
-    justify-content: left;
 
-}
 
 .businessContainer {
     position: relative;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    width: min(800px, 100%);
+    width: 100vw;
     height: 100vh;
-    margin: 0px 300px 300px 300px; */
-  
- 
-    
+    background-color: darkgray;
 }
 
 
@@ -40,32 +32,33 @@ h2 {
 .bannerContainer {
    
     display: flex;
-    flex-direction: column;
-    align-items: left;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 100px;
-    z-index: 20;
+   
     width: 100%;
     height: 350px;
+    z-index:20;
      /* background-color: red; */
     /* background-color: transparent; */
 }
-.topBanner {
+/* .topBanner {
     display: flex;
     height: 60%;
-    /* background-color: brown; */
-     background-color: transparent;
-}
+ 
+} */
 .leftBanner {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-grow: 1;
+ 
     /* background-color: aqua; */
-    background-color: transparent;
+    /* background-color: transparent; */
+}
+.centerBanner {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
 }
 
 .secondLine {
