--- a/frontend/src/components/Businesses/Businesses.css
+++ b/frontend/src/components/Businesses/Businesses.css
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 .businessContainer {
     position: relative;
     display: flex;
@@ -13,30 +7,24 @@
     background-color: darkgray;
 }
 
-
 .backgroundContainer {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 350px;
- 
     z-index: 10;
      background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg');
     /* background-color: #5cb9ff; */
-    /* background-color: rgba(92,185,255, 0.1); */
-  
-    
+    /* background-color: rgba(92,185,255, 0.1); */  
 }
 
 .bannerContainer {
-   
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     position: absolute;
-   
     width: 100%;
     height: 350px;
     z-index:20;
@@ -57,7 +45,7 @@
 }
 .centerBanner {
     display: flex;
-    width: 50%;
+    width: 60%;
     flex-direction: column;
 }
 
@@ -66,21 +54,16 @@
 }
 .rightBanner {
     display: flex; 
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    /* background-color: antiquewhite; */
-    background-color: transparent;
-
+    flex-grow: 1;
 }
 
 .bottomBanner{
     display: flex;
     align-items: flex-end;
     height: 40%;
-    /* background-color: yellow; */
+    background-color: yellow;
     font-weight: bold;
-    background-color: transparent;
+    /* background-color: transparent; */
 
 }
 
