--- a/frontend/src/components/Business/BusinessCard/BusinessCard.css
+++ b/frontend/src/components/Business/BusinessCard/BusinessCard.css
@@ -7,22 +7,29 @@
     height: 120px; 
     margin: 20px 0px;
     border: solid 2px transparent;
-    /* border-radius: 15px; */
+    border-radius: 7px;
      /* width:400px; */
 
   
     /* background-color: brown; */
 }
-/* 
+
 #imageContainer {
     display:flex;
     width: 30%;
     height: 100%;
     align-items: center;
     justify-content: center;
-    border-radius: 15px 0px 0px 15px;
+    border-radius: 14px 0px 0px 14px;
     background-color:#5cb9ff;
-} */
+}
+
+#busPic {
+    width:100%;
+    height: 100%;
+    border: 1px solid transparent;
+    border-radius: 14px 0px 0px 14px;
+}
 
 #reviewContainer {
     display: flex;
@@ -31,7 +38,7 @@
     box-sizing: border-box;
     height: 100%;
     background-color: white;
-    border-radius: 0 15px 15px 0;
+    border-radius: 0 14px 14px 0;
     padding: 20px;
 
 }
@@ -43,10 +50,4 @@
 
 #x {
     color: gray;
-}
-
-#pic{
-    width: 100%;
-    height: 100%;
-    border-radius: 15px 0px 0px 14px;
 }
