--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -11,31 +11,33 @@
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 350px;
+    height: 50%;
     z-index: 10;
-     background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg');
+    background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg');
     /* background-color: #5cb9ff; */
     /* background-color: rgba(92,185,255, 0.1); */  
 }
 
 .bannerContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    position: absolute;
     width: 100%;
-    height: 350px;
+    height: 50%;
     z-index:20;
      /* background-color: red; */
     /* background-color: transparent; */
 }
-/* .topBanner {
-    display: flex;
-    height: 60%;
- 
-} */
+
 .leftBanner {
     display: flex;
     flex-grow: 1;
@@ -47,8 +49,14 @@
     display: flex;
     width: 60%;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
+#bannerSearchBar{
+    width: 75%;
+}
 .secondLine {
     font-size: smaller;
 }
@@ -57,25 +65,21 @@
     flex-grow: 1;
 }
 
-.bottomBanner{
+/* .bottomBanner{
     display: flex;
     align-items: flex-end;
     height: 40%;
-    background-color: yellow;
+
     font-weight: bold;
     /* background-color: transparent; */
 
-}
+/* } */
 
 .cardContainer {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-    background-color: aquamarine;
-    /* background-color: transparent; */
-
+    flex-grow: 1;
+    width: 100vw;
+    height: 100%;
 }
 
 
