--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    background-color: darkgray;
+    background-color: black;
 }
 
 .backgroundContainer {
@@ -18,7 +18,7 @@
     width: 100%;
     height: 50%;
     z-index: 10;
-    background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg');
+    /* background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg'); */
     /* background-color: #5cb9ff; */
     /* background-color: rgba(92,185,255, 0.1); */  
 }
