searchbar is functioning on choosing name

--- a/frontend/src/components/Navigation/NavButtons/ProfileButton/ProfileButton.css
+++ b/frontend/src/components/Navigation/NavButtons/ProfileButton/ProfileButton.css
@@ -6,7 +6,7 @@
     border-radius: 5px;
     color: white;
     /* background-color: rgb(102, 102, 174); */
-    background-color: #5cb9ff;;
+    background-color: #18A5E7;
     width: 35px;
     
 }
