--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -7,6 +7,7 @@ button {
     color: white;
     /* background-color: rgb(102, 102, 174); */
     background-color: #5cb9ff;
+    /* background-color: #18A5E7; */
     padding-left: 10px;
     padding-right: 10px;
 }
