--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 /* TODO Add site wide styles */
 
+/* background-color: #5cb9ff; */
 
 @import './reset.css';
 
@@ -7,4 +8,9 @@
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+/* #18E7C1
+
+#18A5E7
+#18E75A */
 
