search function working well

--- a/frontend/src/components/Auth/LoginForm/LoginForm.css
+++ b/frontend/src/components/Auth/LoginForm/LoginForm.css
@@ -63,7 +63,7 @@ input:not(#submit) {
     /* z-index: 100; */
 }
 
-ul {
+#ulLogin {
     color: red;
     font-style: italic;
     padding-left: 20px;
