--- a/frontend/src/components/Auth/SignupForm/SignupForm.css
+++ b/frontend/src/components/Auth/SignupForm/SignupForm.css
@@ -48,7 +48,7 @@ input:not(#submit) {
     font-weight:bolder;
 }
 
-ul {
+#ulSignUp {
     color: red;
     font-style: italic;
     padding-left: 20px;
