--- a/frontend/src/components/Navigation/NavButtons/ProfileButton/ProfileButton.css
+++ b/frontend/src/components/Navigation/NavButtons/ProfileButton/ProfileButton.css
@@ -6,7 +6,13 @@
     border-radius: 5px;
     color: white;
     /* background-color: rgb(102, 102, 174); */
-    background-color: #18A5E7;
+    /* background-color: #18A5E7; */
+    background-color: var(--two);
     width: 35px;
+    transition: all 0.3s;
     
+}
+#profile-button:hover {
+   border: 2px solid var(--three);
+   height: 38px;
 }
