--- a/frontend/src/components/Test/Test.css
+++ b/frontend/src/components/Test/Test.css
@@ -1,30 +1,10 @@
-.container {
+#testContainer {
  
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
+  background-color:lightslategray;
 
 
 
 }
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #eee;
-  z-index: 1;
-}
-
-.top {
-  position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
- 
-  
- 
-  z-index: 2;
-}
