--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,16 @@ body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+:root {
+    /* --green: #18E75A;
+    --blue: #18A5E7;
+    --aqua: #18E7C1; */
+
+    --one: #509CAF;
+    --two: #506CAF;
+    --three: #50AF93;
+}
+
 /* #18E7C1
 
 #18A5E7
