--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -1,22 +1,22 @@
 
 
-.blueButton {
+/* .blueButton {
     height: 35px;
     padding: 3px;
     border-radius: 5px;
     color: white;
     background-color: var(--two);
-    /* background-color: #18A5E7; */
+   
     padding-left: 10px;
     padding-right: 10px;
     transition: all 0.3s;
-}
+} */
 
-.blueButton:hover {
+/* .blueButton:hover { */
     /* height: 40px; */
-    border: 2px solid var(--one);
+    /* border: 2px solid var(--one); */
     /* background-color: var(--aqua); */
-}
+/* } */
 
 #container {
     display: flex;
