--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,3 +24,21 @@ body {
 #18A5E7
 #18E75A */
 
+ .blueButton {
+    height: 35px;
+    padding: 3px;
+    border-radius: 5px;
+    color: white;
+    background-color: var(--two);
+   
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: all 0.3s;
+} 
+
+
+.blueButton:hover { 
+    /* height: 40px; */
+    border: 2px solid var(--one);
+    /* background-color: var(--aqua); */
+ }
