--- a/frontend/src/components/Business/BusinessCard/BusinessCard.css
+++ b/frontend/src/components/Business/BusinessCard/BusinessCard.css
@@ -5,7 +5,7 @@
     width: min(48%, 400px);
     /* height: max(50%, 120px); */
     height: 120px; 
-    margin: 20px 0px;
+    margin: 20px;
     border: solid 2px transparent;
     border-radius: 7px;
      /* width:400px; */
@@ -22,6 +22,7 @@
     justify-content: center;
     border-radius: 14px 0px 0px 14px;
     background-color:#5cb9ff;
+
 }
 
 #busPic {
