--- a/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
+++ b/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
@@ -7,6 +7,9 @@
     flex-wrap: wrap;
     width: 100%;
     height:100%;
-    background-color: #efe9b8;
+    padding-left: 10%;
+    padding-right: 10%;
+    /* background-color: #efe9b8; */
     /* background-color: rgba(92,185,255, 0.4);   */
+    background-color: var(--three);
 }
