--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -19,7 +19,8 @@
     justify-content: center;
     align-items: center;
     z-index: -1;
-    background-color: aqua;
+    /* background-color: aqua; */
+    background-color: var(--three);
 }
 
 #app-nav {
