--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -1,13 +1,37 @@
-.businessContainer {
+#businessContainer {
     position: relative;
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: black;
+    height: 2000px;
+    overflow-y: scroll;
+}
+#bannerContainer {
+    position: relative;
+    /* top: 0;
+    left: 0; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: min(700px, 50%);
+    /* z-index:20; */
+     /* background-color: red; */
+    /* background-color: transparent; */
 }
 
-.backgroundContainer {
+/* #businessFrontContainer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100%;
+    background-color: black;
+} */
+#bannerFrontContainer {
     position: absolute;
     top: 0;
     left: 0;
@@ -16,14 +40,29 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50%;
+    height: max(350px, 50%);
+    z-index:20;
+     /* background-color: red; */
+    /* background-color: transparent; */
+}
+
+#backgroundContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     z-index: 10;
     /* background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg'); */
     /* background-color: #5cb9ff; */
     /* background-color: rgba(92,185,255, 0.1); */  
 }
 
-.bannerContainer {
+/* .bannerContainer {
     position: absolute;
     top: 0;
     left: 0;
@@ -32,11 +71,11 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50%;
+    height: max(350px, 50%);
     z-index:20;
      /* background-color: red; */
     /* background-color: transparent; */
-}
+
 
 .leftBanner {
     display: flex;
@@ -75,11 +114,13 @@
 
 /* } */
 
-.cardContainer {
+#cardContainer {
     display: flex;
-    flex-grow: 1;
+    justify-content: start;
+    align-items: start;
+    /* flex-grow: 1; */
     width: 100vw;
-    height: 100%;
+    height: min(500px,50%);
 }
 
 
