--- a/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
+++ b/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
@@ -42,7 +42,7 @@
 
 #mapLeft{
     display: flex;
-    width: 300px;
+    width: 50%;
     height: 100%;
     background-color: blueviolet;
     align-items: center;
