--- a/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
+++ b/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
@@ -25,10 +25,14 @@
 }
 
 #InfoContainer{
+    box-sizing: border-box;;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
+    padding-top: 20px;
+    padding-left: 40px;
+
     background-color: red;
 
 }
@@ -62,4 +66,10 @@
 }
 .zelpMap {
     height: 300px;
+}
+
+.displayText {
+    font-size: 0.4in;
+    color: var(--three);
+    padding-left: 10px;
 }
