--- a/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
+++ b/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
@@ -1,19 +1,17 @@
 
-
 .rowContainer {
     display: flex;
     flex-direction: row;
     height: 400px;
     width: 100vw;
-    background-color: green;
+    /* background-color: var(--one); */
+    background-color: rgba(80, 156, 175, 0.3);
 }
-
 
 #BSDLgutter{
     display: flex;
-   width:10%;
-  
-   background-color: yellow;
+   width:10%; 
+   /* background-color: yellow; */
 }
 
 #BSDCenter{
@@ -21,7 +19,7 @@
     flex-direction: row;
     width: 100%;
     height: 400px;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 #InfoContainer{
@@ -32,37 +30,37 @@
     height: 100%;
     padding-top: 20px;
     padding-left: 40px;
-
-    background-color: red;
+    /* background-color: red; */
 
 }
+
+
 #mapContainer{
     display: flex;
     flex-direction: row;
     width: 100%;
     height:400px;
-    background-color: brown;
+    /* background-color: brown; */
 }
 
 #mapLeft{
     display: flex;
     width: 50%;
-    height: 100%;
-    background-color: blueviolet;
+    height: 100%; 
     align-items: center;
     justify-content: center;
+    /* background-color: blueviolet; */
 }
 #mapRight{
     display: flex;
     width: 50%;
     height: 100%;
-    background-color: blue;
-
+    /* background-color: blue; */
 }
 
 #BSDRgutter{
     width:10%;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
 .zelpMap {
     height: 300px;
@@ -71,5 +69,17 @@
 .displayText {
     font-size: 0.4in;
     color: var(--three);
+    padding-top: 10px;
     padding-left: 10px;
+}
+
+.smallerText{
+   font-size: 0.3in;
+   color: var(--one);
+   padding-top: 10px;
+   padding-left: 50px;
+}
+#div1{
+    padding-left: 50px;
+    color:var(--one)
 }
