--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -35,3 +35,31 @@
     color: white;
     border-radius: 0px 7px 7px 0px;
 }
+
+.SBInputWrap {
+    width: 100%;
+    height: 100%;
+    flex-grow: 1;
+    /* background-color: blue; */
+}
+.SBInput {
+    border: none;
+    outline: none;
+    /* background-color: aquamarine; */
+    
+}
+.SBDropDown{
+    background-color: white;
+    color: black;
+    font-style: italic;
+    font-size: smaller;
+    padding:10px;
+    margin: 10px;
+    border-radius: 14px;
+
+}
+.SBDropDown.hidden {
+    display: none;
+   
+
+} 
