searchbar styling was fixed

--- a/frontend/src/components/Navigation/SearchBar/SearchBarLeft/SearchBarLeft.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBarLeft/SearchBarLeft.css
@@ -1,6 +1,6 @@
 
 
-#SBLcontainer {
+/* #SBLcontainer {
     display: flex;
     flex-direction: column;
     width:100%;
@@ -11,12 +11,12 @@
     width: 100%;
     height: 100%;
     flex-grow: 1;
-    /* background-color: blue; */
+
 }
 #SBLInput {
     border: none;
     outline: none;
-    /* background-color: aquamarine; */
+
     
 }
 #SBLDropDown{
@@ -33,4 +33,4 @@
     display: none;
    
 
-} 
+}  */
