--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -5,13 +5,12 @@
     width: 100vw;
     height: 100%;
     background-color: black;
+    background-color: transparent;
     height: 2000px;
     overflow-y: scroll;
 }
 #bannerContainer {
     position: relative;
-    /* top: 0;
-    left: 0; */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -20,7 +19,7 @@
     height: min(700px, 50%);
     /* z-index:20; */
      /* background-color: red; */
-    /* background-color: transparent; */
+    background-color: transparent;
 }
 
 /* #businessFrontContainer {
@@ -31,7 +30,7 @@
     height: 100%;
     background-color: black;
 } */
-#bannerFrontContainer {
+#frontContainer {
     position: absolute;
     top: 0;
     left: 0;
@@ -42,10 +41,9 @@
     width: 100%;
     height: max(350px, 50%);
     z-index:20;
-     /* background-color: red; */
+     background-color: red;
     /* background-color: transparent; */
 }
-
 #backgroundContainer {
     position: absolute;
     top: 0;
@@ -57,10 +55,12 @@
     width: 100%;
     height: 100%;
     z-index: 10;
+   
     /* background-image: url('https://zelp99-seeds.s3.us-west-1.amazonaws.com/Sprouts_a1.jpeg'); */
     /* background-color: #5cb9ff; */
     /* background-color: rgba(92,185,255, 0.1); */  
 }
+
 
 /* .bannerContainer {
     position: absolute;
