--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -5,26 +5,34 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: 40px;
-    background: white;
-    border-radius: 6px;
+    height: 40px; 
+    background: white;   
+     border-radius: 6px;
+  
 }
 
 
 
 
-.rightSearchBar {
+/* .rightSearchBar {
     display: flex;
     flex: 1;
-    /* width:50%; */
+
     height:100%;
     margin: 0;
     border:none;
     border-radius:none;
-    /* background-color: blueviolet; */
+ 
     
-}
+} */
 
+.SBcontainer {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    width:100%;
+    height:100%;
+}
 .searchButton {
     display: flex;
     justify-content: center;
@@ -40,12 +48,11 @@
     width: 100%;
     height: 100%;
     flex-grow: 1;
-    /* background-color: blue; */
 }
 .SBInput {
     border: none;
     outline: none;
-    /* background-color: aquamarine; */
+
     
 }
 .SBDropDown{
@@ -63,3 +70,5 @@
    
 
 } 
+
+
