--- a/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
+++ b/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
@@ -10,7 +10,7 @@
 
 #BSDLgutter{
     display: flex;
-   width:10%; 
+    width:10%; 
    /* background-color: yellow; */
 }
 
@@ -68,20 +68,22 @@
 
 .displayText {
     font-size: 0.4in;
-    color: var(--three);
-    padding-top: 10px;
-    padding-left: 10px;
+    color: var(--one);
+    margin: 10px;
+    /* padding-left: 10px;   */
 }
 
 .smallerText{
-   font-size: 0.3in;
-   color: var(--one);
+   font-size: 0.25in;
+   font-style: oblique;
+   margin-top: 10px;
+   color: var(--three);
    padding-top: 10px;
-   padding-left: 50px;
+   padding-left: 90px;
 }
 #div1{
-    padding-left: 50px;
-    color:var(--one)
+    padding-left: 80px;
+    color:var(--three)
 }
 
 #hours {
