--- a/frontend/src/components/Helpers/ExtendIndex/ExtendIndex.css
+++ b/frontend/src/components/Helpers/ExtendIndex/ExtendIndex.css
@@ -7,7 +7,8 @@ button {
     border-radius: 5px;
     color: white;
     /* background-color: rgb(102, 102, 174); */
-    background-color: #5cb9ff;
+    /* background-color: #5cb9ff; */
+    background-color: var(--two);
     padding-left: 10px;
     padding-right: 10px;
 }
