--- a/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
+++ b/frontend/src/components/Business/BusinessShowDisplay/BusinessShowDisplay.css
@@ -55,6 +55,8 @@
     display: flex;
     width: 50%;
     height: 100%;
+    align-items: center;
+    justify-content: start;
     /* background-color: blue; */
 }
 
