--- a/frontend/src/components/Navigation/NavBar/NavBar.css
+++ b/frontend/src/components/Navigation/NavBar/NavBar.css
@@ -13,8 +13,9 @@
    
 }
 #navContainer.index {
-   background-color:  rgba(92,185,255, 0.5);
+   /* background-color:  rgba(92,185,255, 0.5); */
    /* background-color: #18A5E7; */
+   background-color: var(--one);
    
 }
 
