--- a/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
+++ b/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
@@ -4,15 +4,15 @@
 
 
 }
-.blueButton {
+/* .blueButton {
     height: 35px;
     padding: 3px;
     border-radius: 5px;
     color: white;
     /* background-color: rgb(102, 102, 174); */
-    background-color: #5cb9ff;
+    /* background-color: --;
     padding-left: 10px;
     padding-right: 10px;
-    margin: 30px 0px;
+    margin: 30px 0px; */
    
-}
+/* } */ 
