--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -1,28 +1,11 @@
 
-
-/* .blueButton {
-    height: 35px;
-    padding: 3px;
-    border-radius: 5px;
-    color: white;
-    background-color: var(--two);
-   
-    padding-left: 10px;
-    padding-right: 10px;
-    transition: all 0.3s;
-} */
-
-/* .blueButton:hover { */
-    /* height: 40px; */
-    /* border: 2px solid var(--one); */
-    /* background-color: var(--aqua); */
-/* } */
-
-#container {
+#containerNB {
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    flex-grow:1;
+    /* justify-content: space-around; */
     align-items: center;
-    /* background-color: brown; */
+    background-color: brown;
     width: 100%;
     height: 100%
 
