--- a/frontend/src/components/Navigation/NavLogo/NavLogo.css
+++ b/frontend/src/components/Navigation/NavLogo/NavLogo.css
@@ -1,7 +1,17 @@
 
+
+#containerLOGO{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;
+    background-color: yellow;
+}
 #logo {
     height: 40px;
     width: 40px;
     border-radius: 20px;
+    /* background-color: blue; */
 
 }
