--- a/frontend/src/components/Navigation/NavBar/NavBar.css
+++ b/frontend/src/components/Navigation/NavBar/NavBar.css
@@ -1,41 +1,25 @@
 
 
-#navContainer {  
+.navContainer {  
     position:fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 75px; 
-    display: flex;
-    align-items: space-between;
-    justify-content: center;
+    padding-left: 25px;
+    
+    width: 100%;
+    height: var(--nbh);   
+
+    background-color: aqua;
+}
 
    
-}
-#navContainer.index {
-   /* background-color:  rgba(92,185,255, 0.5); */
-   /* background-color: #18A5E7; */
-   background-color: var(--one);
-   
-}
+ 
 
-.nav-link {
-    /* display: flex;
-    color: white;
-    font-weight: 700;
-    align-items: center;
-     */
-}
 
-#logoContainer1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: yellow;
-    background-color: transparent;
-    width: 50px
 
-}
 
 
 
