--- a/frontend/src/components/Navigation/NavLogo/NavLogo.css
+++ b/frontend/src/components/Navigation/NavLogo/NavLogo.css
@@ -2,16 +2,17 @@
 
 #containerLOGO{
     display: flex;
+   
     justify-content: center;
     align-items: center;
-    width:100%;
-    height:100%;
+    width:min(80px, 100%);
+    height:min(var(--nbh),100%);
     background-color: yellow;
 }
 #logo {
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
+    height: calc(var(--nbh) * 0.7);
+    width: calc(var(--nbh) * 0.7);
+    border-radius: calc(var(--nbh) * 0.5);
     /* background-color: blue; */
 
 }
