--- a/frontend/src/components/Navigation/NavBar/NavBar.css
+++ b/frontend/src/components/Navigation/NavBar/NavBar.css
@@ -7,12 +7,10 @@
     justify-content: space-between;
     top: 0;
     left: 0;
-    padding-left: 25px;
-    
+    padding-left: 25px;  
     width: 100%;
-    height: var(--nbh);   
-
-    background-color: aqua;
+    height: var(--nbh);  
+    background-color: var(--one); 
 }
 
 
