--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -119,6 +119,8 @@
     padding:10px;
     margin: 10px;
     border-radius: 14px;
+    border: none;
+    background-color: var(--two);
 }
 .SBDropDown.hidden {
     display: none;
