--- a/frontend/src/components/Auth/SignupForm/SignupForm.css
+++ b/frontend/src/components/Auth/SignupForm/SignupForm.css
@@ -32,7 +32,7 @@ f#inputForm {
 
 
 
-input {
+/* input {
     height: 30px;
     border-radius: 5px;
     margin: 5px;
@@ -40,7 +40,7 @@ input {
 }
 input:not(#submit) {
     padding-left: 20px;
-}
+} */
 
 #submit {
     background-color: #5cb9ff;
