--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -1,6 +1,6 @@
 
 
-.searchBarContainer {
+/* .searchBarContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -9,7 +9,7 @@
     background: white;   
      border-radius: 6px;
   
-}
+} */
 
 
 
@@ -26,14 +26,14 @@
     
 } */
 
-.SBcontainer {
+/* .SBcontainer {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     width:100%;
     height:100%;
-}
-.outerSB {
+} */
+/* .outerSB {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,8 +51,8 @@
     color: white;
     border-radius: 0px 7px 7px 0px;
 
-}
-.SBInputWrap {
+} */
+/* .SBInputWrap {
     width: 100%;
     height: 100%;
     flex-grow: 1;
@@ -62,8 +62,8 @@
     outline: none;
 
     
-}
-.SBDropDown{
+} */
+/* .SBDropDown{
     background-color: white;
     color: black;
     font-style: italic;
@@ -77,6 +77,6 @@
     display: none;
    
 
-} 
+}  */
 
 
